Added processing games list